# drehgeber-adapter

./: .gitignore
adapter/so-14/: so-14-cache.lib  so-14.kicad_pcb  so-14.sch
adapter/so-8/: so-8.kicad_pcb
encoder/: encoder_adapter.kicad_pcb
encoder/drivers/msp430/: CMakeLists.txt  main.cc
msp430/: fp-lib-table  msp430breakout-cache.lib  msp430breakout.kicad_pcb  msp430breakout.pro  msp430breakout.sch
msp430/local.pretty/: QR_AISLER.kicad_mod
pcb/: encoder_adapter-cache.lib  encoder_adapter.kicad_pcb  encoder_adapter.sch
pyftdi/: ftdi_encoder.py
